# internal/core/auth/auth_model.go
@@ -1,4 +1,4 @@
-package model
+package auth
 
 type AuthModel struct {
 	Email    string `json:"email" validate:"required,email"`
@@ -9,4 +9,8 @@ type AuthResponse struct {
 	Token        string      `json:"token"`
 	RefreshToken string      `json:"refresh_token"`
 	Data         interface{} `json:"data"`
+}
+
+type LogoutRequest struct {
+	RefreshToken string `json:"refresh_token" example:"your-refresh-token"`
 }
