# internal/core/users/routes.go
@@ -1,9 +1,14 @@
 package users
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/HasanNugroho/starter-golang/config"
+	"github.com/HasanNugroho/starter-golang/internal/shared/middleware"
+	"github.com/gin-gonic/gin"
+)
 
-func RegisterUserRoutes(router *gin.RouterGroup, handler *UserHandler) {
+func RegisterUserRoutes(router *gin.RouterGroup, config *config.Config, handler *UserHandler) {
 	userRoutes := router.Group("/users")
+	userRoutes.Use(middleware.AuthMiddleware(config))
 	{
 		userRoutes.POST("/", handler.Create)
 		userRoutes.GET("/", handler.FindAll)
@@ -11,4 +16,5 @@ func RegisterUserRoutes(router *gin.RouterGroup, handler *UserHandler) {
 		userRoutes.PUT("/:id", handler.Update)
 		userRoutes.DELETE("/:id", handler.Delete)
 	}
+
 }
